tests/saks/should_fail/saks_fail013.stderr

saks_fail013.hs:10:22: error: [GHC-76037]
    Not in scope: type variable ‘k’
